updated makefile with swagger-doc step

--- a/services/text-event-service/scripts/Makefile
+++ b/services/text-event-service/scripts/Makefile
@@ -1,3 +1,7 @@
 build:
 	$(info running build text-event-service)
 	@go build -o ../bin/ ..
+
+swagger-doc:
+	$(info generating swagger OpenAPI2 documentation)
+	@swagger generate spec .. -o ../docs/swagger.yaml --scan-models
