--- a/services/text-event-service/scripts/Makefile
+++ b/services/text-event-service/scripts/Makefile
@@ -5,3 +5,7 @@ build:
 swagger-doc:
 	$(info generating swagger OpenAPI2 documentation)
 	@swagger generate spec .. -o swagger.yaml --scan-models
+
+swagger-sdk:
+	$(info generating Golang SDK)
+	@swagger -q generate client -f ./swagger.yaml -t ../sdk/ -A text-event-service
