updated makefile script with run and test steps

--- a/services/text-event-service/scripts/Makefile
+++ b/services/text-event-service/scripts/Makefile
@@ -1,3 +1,11 @@
+run:
+	$(info running text-event-service)
+	@go run ../main.go
+
+test:
+	$(info running text-event-service unit tests)
+	@go test ../...
+
 build:
 	$(info running build text-event-service)
 	@go build -o ../bin/ ..
