moved makefile to root service directory & updated cmds

--- a/services/text-event-service/Makefile
+++ b/services/text-event-service/Makefile
@@ -24,7 +24,7 @@ DATE_LD   := -X "$(DATE_URL)=$(DATE_VAL)"
 
 run:
 	$(info running text-event-service)
-	@go run ../main.go
+	@go run src/main.go
 
 test:
 	$(info running text-event-service unit tests)
@@ -34,12 +34,12 @@ test:
 
 build:
 	$(info running build text-event-service)
-	@go build $(LD_FLAGS) -o ../bin/ ..
+	@go build $(LD_FLAGS) -o ./bin/ ./src
 
 swagger-doc:
 	$(info generating swagger OpenAPI2 documentation)
-	@swagger generate spec .. -o swagger.yaml --scan-models
+	@swagger generate spec ./src -o ./resources/swagger.yaml --scan-models
 
 swagger-sdk:
 	$(info generating Golang SDK)
-	@swagger -q generate client -f ./swagger.yaml -t ../sdk/ -A text-event-service
+	@swagger -q generate client -f ./resources/swagger.yaml -t ./sdk/ -A text-event-service
