added multi-stage build in docker: apline build & scratch bin

--- a/services/text-event-service/Dockerfile
+++ b/services/text-event-service/Dockerfile
@@ -1,4 +1,8 @@
-FROM golang:1.15.5-alpine3.12
+FROM golang:1.15.5-alpine3.12 AS build
 WORKDIR /app
 COPY . .
 RUN go build -o /app/bin/text-event-service ./src
+
+FROM scratch AS bin
+COPY --from=build /app/bin/text-event-service /
+ENTRYPOINT ["/text-event-service"]
