--- a/services/text-event-service/Dockerfile
+++ b/services/text-event-service/Dockerfile
@@ -1,5 +1,8 @@
 FROM golang:1.15.5-alpine3.12 AS build
+ENV CGO_ENABLED=0
 WORKDIR /app
+COPY go.* .
+RUN go mod download
 COPY . .
 RUN go build -o /app/bin/text-event-service ./src
 
