added PORT variable to makefile & dockerfile + updated container build

--- a/services/text-event-service/Dockerfile
+++ b/services/text-event-service/Dockerfile
@@ -8,7 +8,8 @@ COPY . .
 RUN go build -ldflags "$LD_FLAGS" -o /app/bin/text-event-service ./src
 
 FROM scratch AS bin
+ARG EXPOSED_PORTS
 COPY --from=build /app/bin/text-event-service /
 COPY --from=build /app/resources /resources
-EXPOSE 9999
+EXPOSE $EXPOSED_PORTS
 ENTRYPOINT ["/text-event-service"]
