--- a/services/text-event-service/docker-compose.yml
+++ b/services/text-event-service/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - 9999:9999
     container_name: events
     restart: always
+    depends_on:
+      - mongo
 
   mongo:
     image: mongo:4.4.2-bionic
