added missing volumes declaration and fixed docker compose fail

--- a/services/text-event-service/Dockerfile
+++ b/services/text-event-service/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.15.5-alpine3.12 AS build
 ARG LD_FLAGS
 ENV CGO_ENABLED=0
 WORKDIR /app
-COPY go.* .
+COPY go.* ./
 RUN go mod download
 COPY . .
 RUN go build -ldflags "$LD_FLAGS" -o /app/bin/text-event-service ./src
