--- a/services/text-event-service/resources/settings.yaml
+++ b/services/text-event-service/resources/settings.yaml
@@ -12,7 +12,7 @@ server:
         write: 10
 mongo:
     scheme: "mongodb://"    # valid: "mongodb://" or "mongodb+srv://"
-    ip: "192.168.221.177"
+    ip: "mongo"
     port: "27017"
     db:
         name: "event-service"
