used env file LD_FLAGS variable to update docker build process

--- a/services/text-event-service/docker-compose.yml
+++ b/services/text-event-service/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       args:
-        - LD_FLAGS
+        - LD_FLAGS=$LD_FLAGS
         - EXPOSED_PORTS=9999
       dockerfile: Dockerfile
       target: bin
