--- a/services/categories-service/src/main/resources/application.properties
+++ b/services/categories-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+dao.provider=postgres
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/categories
 spring.datasource.username=postgres
 spring.datasource.password=password
