updated property name to repository.type

--- a/services/categories-service/src/main/resources/application.properties
+++ b/services/categories-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-dao.provider=postgres
+repository.type=postgres
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/categories
 spring.datasource.username=postgres
