--- a/services/categories-service/pom.xml
+++ b/services/categories-service/pom.xml
@@ -51,6 +51,12 @@
 			<version>3.0.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.0.204</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
