--- a/services/categories-service/src/main/resources/application.properties
+++ b/services/categories-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 repository.type=postgres
 
+server.port=8765
+
 spring.banner.location=classpath:/static/app-banner.txt
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/categories
