--- a/services/categories-service/pom.xml
+++ b/services/categories-service/pom.xml
@@ -57,6 +57,11 @@
 			<version>2.0.204</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
