setup swagger url & added some initial values (enabled, model V3)

--- a/services/categories-service/src/main/resources/application.properties
+++ b/services/categories-service/src/main/resources/application.properties
@@ -2,6 +2,10 @@ repository.type=postgres
 
 server.port=8765
 
+springfox.documentation.swagger-ui.base-url=/docs
+springfox.documentation.open-api.enabled=true
+springfox.documentation.swagger.v2.use-model-v3=true
+
 spring.banner.location=classpath:/static/app-banner.txt
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/categories
@@ -10,5 +14,4 @@ spring.datasource.password=password
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 spring.jpa.hibernate.ddl-auto=update
