removed default whitelabel error page template usage

--- a/services/categories-service/src/main/resources/application.properties
+++ b/services/categories-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 repository.type=postgres
 
 server.port=8765
+server.error.whitelabel.enabled=false
 
 springfox.documentation.swagger-ui.base-url=/docs
 springfox.documentation.open-api.enabled=true
