updated app properties file with explicit contex & error pages settings

--- a/services/categories-service/src/main/resources/application.properties
+++ b/services/categories-service/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 repository.type=postgres
 
 server.port=8765
-server.error.whitelabel.enabled=false
+server.servlet.context-path=/
+server.error.path=/error
+server.error.whitelabel.enabled=true
 
 springfox.documentation.swagger-ui.base-url=/docs
 springfox.documentation.open-api.enabled=true
