--- a/services/categories-service/pom.xml
+++ b/services/categories-service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.domesticity</groupId>
 	<artifactId>categories-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>categories-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
