updated app properties with health settings

--- a/services/categories-service/src/main/resources/application.properties
+++ b/services/categories-service/src/main/resources/application.properties
@@ -5,6 +5,9 @@ server.servlet.context-path=/
 server.error.path=/error
 server.error.whitelabel.enabled=true
 
+management.endpoints.web.base-path=/
+management.endpoint.health.show-details=never
+
 springfox.documentation.swagger-ui.base-url=/docs
 springfox.documentation.open-api.enabled=true
 springfox.documentation.swagger.v2.use-model-v3=true
