added JaCoCo plugin to project pom.xml (code coverage)

--- a/services/categories-service/pom.xml
+++ b/services/categories-service/pom.xml
@@ -95,6 +95,11 @@
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.7</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
